# vs-jetpack

./: .editorconfig  .gitignore  LICENSE  README.md  _metadata.py  flake.nix  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/setup-akarin/: action.yml
.github/actions/setup-fmtc/: action.yml
.github/actions/setup-vapoursynth/: action.yml
.github/actions/setup-vszip/: action.yml
.github/workflows/: autotag.yml  docs.yml  lint.yml  publish.yml  pypipublish.yml  test.yml
docs/: index.md
docs/css/: extra.css
docs/templates/python/material/: class.html.jinja  function.html.jinja
scripts/: add_version_pkgs.py  gen_ref_pages.py
stgpytools/: README.md
stubs/: dfttest2.pyi  vsmlrt.pyi
stubs/mkdocs_gen_files/: __init__.pyi  editor.pyi  nav.pyi
stubs/pymediainfo/: __init__.pyi
stubs/vapoursynth/: __init__.pyi  _enums.pyi  _env.pyi  _formats.pyi  _frames.pyi  _functions.pyi  _logging.pyi  _nodes.pyi  _typings.pyi  _version.pyi
stubs/vspreview/: __init__.pyi
stubs/vspreview/api/: __init__.pyi
stubs/vspreview/core/: __init__.pyi  abstracts.pyi
stubs/vspreview/main/: __init__.pyi  window.pyi
tests/: test_kernels.py
tests/enums/: test_other.py
tests/functions/: test_timecodes.py
tests/vsexprtools/: test_exprop.py  test_exprtools_funcs.py  test_inline.py
tests/vskernels/: test_kernels.py
tests/vstools/enums/: test_color.py  test_generic.py  test_other.py
tests/vstools/functions/: test_file.py  test_funcs.py  test_heuristics.py  test_normalize.py  test_timecodes.py  test_utils.py
tests/vstools/utils/: test_clips.py  test_props.py  test_scale.py  test_vs_proxy.py
vsaa/: README.md  __init__.py  abstract.py  deinterlacers.py  funcs.py
vsaa/antialiasers/: eedi2.py  eedi3.py  nnedi3.py  sangnom.py
vsdeband/: README.md  __init__.py  abstract.py  debanders.py  f3kdb.py  filters.py  funcs.py  mask.py  noise.py  placebo.py
vsdehalo/: README.md  __init__.py  alpha.py  border.py  denoise.py  mask.py  warp.py
vsdeinterlace/: README.md  __init__.py  blending.py  enums.py  funcs.py  ivtc.py  qtgmc.py  utils.py
vsdenoise/: README.md  __init__.py  blockmatch.py  bm3d.py  ccd.py  deblock.py  fft.py  freqs.py  funcs.py  nlm.py  postprocess.py  prefilters.py  regress.py
vsdenoise/mvtools/: __init__.py  enums.py  motion.py  mvtools.py  presets.py  utils.py
vsexprtools/: __init__.py  error.py  exprop.py  funcs.py  manager.py  operators.py  polyfills.py  util.py  variables.py
vsexprtools/inline/: __init__.py  error.py  helpers.py  manager.py  polyfills.py
vsjetpack/: __init__.py  helpers.py  types.py
vskernels/: README.md  __init__.py  docs.py  exceptions.py  types.py  util.py
vskernels/abstract/: __init__.py  base.py  complex.py  custom.py
vskernels/kernels/: __init__.py  abstract.py  bicubic.py  complex.py  custom.py  docs.py  helpers.py  placebo.py  resize.py  spline.py  various.py  zimg.py
vskernels/kernels/custom/: __init__.py  bicubic.py  helpers.py  spline.py  various.py
vskernels/kernels/zimg/: __init__.py  abstract.py  bicubic.py  spline.py  various.py
vsmasktools/: README.md  __init__.py  _metadata.py  abstract.py  details.py  diff.py  edge_funcs.py  exceptions.py  hardsub.py  masks.py  morpho.py  spat_funcs.py  types.py  utils.py
vsmasktools/edge/: _1d.py  _3x3.py  _5x5.py  __init__.py  _abstract.py
vsrgtools/: README.md  __init__.py  blur.py  contra.py  enum.py  freqs.py  limit.py  regress.py  rgtools.py  sharp.py  util.py
vsrgtools/aka_expr/: __init__.py  _rg.py  _rp.py
vsscale/: README.md  __init__.py  base.py  funcs.py  generic.py  helpers.py  mask.py  onnx.py  rescale.py  scale.py  shaders.py  various.py
vssource/: README.md  __init__.py  dataclasses.py  funcs.py  rff.py  utils.py
vssource/formats/: __init__.py
vssource/formats/dvd/: IsoFile.py  IsoFileCore.py  __init__.py  title.py  utils.py
vssource/formats/dvd/parsedvd/: __init__.py  c_adt.py  ifo.py  sector.py  timespan.py  vts_pgci.py  vtsi_mat.py
vssource/indexers/: D2VWitch.py  DGIndex.py  DGIndexNV.py  __init__.py  base.py  dvdsrc.py  misc.py
vstools/: README.md  __init__.py
vstools/enums/: __init__.py  base.py  color.py  funcs.py  generic.py  other.py  stubs.py
vstools/exceptions/: __init__.py  base.py  color.py  enum.py  file.py  generic.py  module.py
vstools/functions/: __init__.py  check.py  clip.py  clips.py  file.py  funcs.py  heuristics.py  normalize.py  packets.py  progress.py  ranges.py  render.py  timecodes.py  utils.py
vstools/functions/render/: render.py
vstools/types/: __init__.py  builtins.py  file.py  funcs.py  generic.py  utils.py
vstools/utils/: __file_headers.json  __init__.py  cache.py  check.py  clips.py  colors.py  ffprobe.py  file.py  funcs.py  gpu.py  info.py  math.py  mime.py  mime_base.py  misc.py  other.py  props.py  ranges.py  scale.py  vs_enums.py  vs_proxy.py
vstools/utils/mime/: __file_headers.json  __init__.py  ffprobe.py  file.py
vstools/vs_proxy/: __init__.py  enums.py  objects.py  proxy.py  vs_vars.py
