[project]
name = "vsjetpack"
dynamic = ["version"]
description = "Full suite of filters, wrappers, and helper functions for filtering video using VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jaded Encoding Thaumaturgy"}
]
maintainers = [
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "VapourSynth>=67",
    "jetpytools~=1.4.0",
    "numpy>=2.0.0",
    "rich>=12.6.0",
    "scipy>=1.10.0",
    "typing_extensions>=4.12.2",
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "packaging>=24.0",
    "pycodestyle>=2.11.1",
    "pytest>=8.3.4, <9.0.0",
    "pytest-cov>=6.0.0, <7.0.0",
    "ruff>=0.11.9",
    "scipy-stubs>=1.15.2.1",
    "twine>=6.1.0",
    "types-psutil>=7.0.0.20250218",
]
doc = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.6.14",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==0.28.2",

    # Used by mkdocstrings to format signatures.
    "black==25.1.0",

    # Additional packages to be documented.
    "vsadjust @ git+https://github.com/Jaded-Encoding-Thaumaturgy/vs-adjust.git ; python_version >= '3.12'",
    "vspreview==0.11.3 ; python_version >= '3.12'",
    "vspyplugin==1.4.5 ; python_version >= '3.12'",
    "vstransitions==0.1.2 ; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=[
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
include = [
    "vstools/py.typed",
    "vstools/utils/*.json",
    "vskernels/py.typed",
    "vsexprtools/py.typed",
    "vsrgtools/py.typed",
    "vsmasktools/py.typed",
    "vsaa/py.typed",
    "vsscale/py.typed",
    "vsdenoise/py.typed",
    "vsdehalo/py.typed",
    "vsdeband/py.typed",
    "vsdeinterlace/py.typed",
    "vssource/py.typed",
]
exclude = ["docs", "scripts", "site", "stubs", "tests"]

[tool.hatch.build.targets.sdist]
exclude = ["docs", "scripts", "site", "stubs", "tests"]

[tool.hatch.version]
path = "_metadata.py"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true
