[project]
name = "vsjetpack"
dynamic = ["version"]
description = "Full suite of filters, wrappers, and helper functions for filtering video using VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jaded Encoding Thaumaturgy"}
]
maintainers = [
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "VapourSynth>=67",
    "jetpytools~=1.6.1",
    "numpy>=2.0.0",
    "rich>=12.6.0",
    "scipy>=1.10.0",
    "typing_extensions>=4.12.2",
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "packaging>=25.0",
    "pytest>=8.4.1, <9.0.0",
    "pytest-cov>=6.2.1, <7.0.0",
    "ruff>=0.12.7",
    "scipy-stubs>=1.15.3.0",  # Update this when we'll drop python 3.10
    "twine>=6.1.0",
    "types-psutil>=7.0.0.20250801",
]
doc = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.6.14",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==0.28.2",

    # Used by mkdocstrings to format signatures.
    "black==25.1.0",

    # Additional packages to be documented.
    "vsadjust @ git+https://github.com/Jaded-Encoding-Thaumaturgy/vs-adjust.git ; python_version >= '3.12'",
    "vspreview==0.15.0 ; python_version >= '3.12'",
    "vstransitions==0.1.3 ; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=[
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
include = [
    "vstools/py.typed",
    "vstools/utils/*.json",
    "vskernels/py.typed",
    "vsexprtools/py.typed",
    "vsrgtools/py.typed",
    "vsmasktools/py.typed",
    "vsaa/py.typed",
    "vsscale/py.typed",
    "vsdenoise/py.typed",
    "vsdehalo/py.typed",
    "vsdeband/py.typed",
    "vsdeinterlace/py.typed",
    "vssource/py.typed",
]
exclude = ["docs", "scripts", "site", "stubs", "tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/vsaa",
    "/vsdeband",
    "/vsdehalo",
    "/vsdeinterlace",
    "/vsdenoise",
    "/vsexprtools",
    "/vskernels",
    "/vsmasktools",
    "/vsrgtools",
    "/vsscale",
    "/vssource",
    "/vstools",
    "_metadata.py",
]

[tool.hatch.version]
path = "_metadata.py"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

exclude = ["scripts/"]
# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
extend-exclude = ["scripts"]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = [
    "stubs/vspreview",
    "stubs/dfttest2.pyi",
    "stubs/vsmlrt.pyi",
]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "RUF"
]
ignore = ["PYI041"]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
"stubs/vapoursynth/**.pyi" = [
    "E501",
    "N801",
    "N802",
    "N803",
    "PYI021",
    "PYI002",
    "RUF022",
]
