[project]
name = "vsjetpack"
dynamic = ["version"]
description = "Full suite of filters, wrappers, and helper functions for filtering video using VapourSynth"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jaded Encoding Thaumaturgy" }]
maintainers = [
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
keywords = [
    "vapoursynth",
    "video",
    "encoding",
    "wrappers",
    "helpers",
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "VapourSynth>=69",
    "jetpytools~=2.2.0",
    "numpy>=2.0.0",
    "typing_extensions>=4.15.0; python_version<'3.13'",
]

[project.optional-dependencies]
full = ["scipy>=1.16.0", "rich>=14.0.0", "psutil>=7.0.0"]

[project.urls]
Documentation = "https://jaded-encoding-thaumaturgy.github.io/vs-jetpack/"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack"
Tracker = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = [
    "mypy~=1.18.2",
    "pytest>=9.0.0, <10.0.0",
    "pytest-cov>=6.2.1, <8.0.0",
    "ruff~=0.14.0",
    "scipy-stubs>=1.16.0.0",
    "twine>=6.1.0",
    "types-psutil>=7.0.0.20250801",
    # Needed for the folder "scripts"
    "mkdocs-gen-files==0.5.0",
    "vstransitions==0.1.4",
]
doc = [
    "griffe-inherited-docstrings==1.1.2",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.0",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mkdocstrings[python]==0.30.1",

    # Used by mkdocstrings to format signatures.
    "black==25.11.0",

    # Additional packages to be documented.
    "vspreview==0.15.0",
    "vstransitions==0.1.4",
]

[build-system]
requires = ["hatchling>=1.27.0", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["vsjetpack/_version.py"]

[tool.hatch.build.targets.wheel]
packages = [
    "vsjetpack",
    "vstools",
    "vskernels",
    "vsexprtools",
    "vsrgtools",
    "vsmasktools",
    "vsaa",
    "vsscale",
    "vsdenoise",
    "vsdehalo",
    "vsdeband",
    "vsdeinterlace",
    "vssource",
]
exclude = ["docs", "scripts", "site", "stubs", "tests", "README.*"]

[tool.hatch.build.targets.sdist]
include = [
    "docs",
    "scripts",
    "stubs",
    "tests",
    "vsaa",
    "vsdeband",
    "vsdehalo",
    "vsdeinterlace",
    "vsdenoise",
    "vsexprtools",
    "vsjetpack",
    "vskernels",
    "vsmasktools",
    "vsrgtools",
    "vsscale",
    "vssource",
    "vstools",
    "_version.py",
    "mkdocs.yml",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"
next-version = "minor-release"
write = { file = "vsjetpack/_version.py", template = "__version__ = \"{normalized_version}\"\n__version_tuple__ = {version_tuple}" }

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition_new = true
local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
exclude = ["stubs/vapoursynth/__init__.pyi"]

[tool.ruff.lint]
exclude = ["stubs/vspreview", "stubs/dfttest2.pyi", "stubs/vsmlrt.pyi"]
extend-select = ["E", "C4", "I", "PYI", "Q", "SIM", "N", "W", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.*" = ["F401", "F403"]
"stubs/vapoursynth/**.pyi" = [
    "E501",
    "N801",
    "N802",
    "N803",
    "N805",
    "PYI021",
    "PYI029",
    "PYI002",
    "RUF022",
]
